--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
                             <a class="popup-with-move-anim" href="#project-2"><div class="element-item-overlay"><span>[4K 60fps] 国内多平台MC服务器，白桦林服务器宣传视频，基岩版服务器+java版服务器，Minecraft 社区服务器</span></div><img src="images/project-2.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item mc self-made">
-                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>一个服务器、50人、一个世界 ：白桦林基岩版服务器第6周目纪念视频</span></div><img src="images/project-3.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item other self-made">
-                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>[Phigros] S代表什么？</span></div><img src="images/project-4.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-3"><div class="element-item-overlay"><span>100名玩家，在一起，用方块缔造传奇 —— 白桦林拜年纪、白桦林互通服务器展示</span></div><img src="images/project-3.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item mc self-made">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</span></div><img src="images/project-5.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>一个服务器、50人、一个世界 ：白桦林基岩版服务器第6周目纪念视频</span></div><img src="images/project-4.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item other self-made">
-                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>[Phigros] S代表什么？</span></div><img src="images/project-5.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item mc self-made">
-                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>【MC】黑人抬棺——起床战争</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</span></div><img src="images/project-6.jpg" alt="alternative"></a>
                         </div>
-                        <div class="element-item mc reprint">
-                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>Minecraft中所有搭桥技术！</span></div><img src="images/project-8.jpg" alt="alternative"></a>
+                        <div class="element-item other self-made">
+                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                        </div>
+                        <div class="element-item mc self-made">
+                            <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>【MC】黑人抬棺——起床战争</span></div><img src="images/project-8.jpg" alt="alternative"></a>
                         </div>
                     </div> <!-- end of grid -->
                     <!-- end of filter -->
@@ -241,6 +241,29 @@
                 <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
+                <h3>100名玩家，在一起，用方块缔造传奇 —— 白桦林拜年纪、白桦林互通服务器展示</h3>
+                <hr class="line-heading">
+                <h6>BV19X4y1N7GC</h6>
+                <p>这是我所有视频中制作最用心的一个，超级好看，感谢Shanwer提供2060super帮助渲染</p>
+                <p>播放量：126<br>弹幕：2<br>点赞：22<br>投币：19<br>收藏：7<br>转发：2<br>（截至2021年2月11日）</p>
+                <div class="testimonial-container">
+                    <p class="testimonial-text"></p>
+                    <p class="testimonial-author"></p>
+                </div>
+                <a class="btn-solid-reg" href="https://www.bilibili.com/video/BV19X4y1N7GC" target="_blank">观看</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">返回</a> 
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of lightbox-basic -->
+    <!-- end of lightbox -->
+
+    <!-- Lightbox -->
+    <div id="project-4" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-8">
+                <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
+            </div> <!-- end of col -->
+            <div class="col-lg-4">
                 <h3>一个服务器、50人、一个世界 ：白桦林基岩版服务器第6周目纪念视频</h3>
                 <hr class="line-heading">
                 <h6>BV1Et4y1U7Wct</h6>
@@ -257,11 +280,11 @@
     <!-- end of lightbox -->
 
     <!-- Lightbox -->
-    <div id="project-4" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="project-5" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
+                <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>[Phigros] S代表什么？</h3>
@@ -280,11 +303,11 @@
     <!-- end of lightbox -->
 
     <!-- Lightbox -->
-    <div id="project-5" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="project-6" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
+                <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</h3>
@@ -303,11 +326,11 @@
     <!-- end of lightbox -->
 
     <!-- Lightbox -->
-    <div id="project-6" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="project-7" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
+                <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</h3>
@@ -326,11 +349,11 @@
     <!-- end of lightbox -->
 
     <!-- Lightbox -->
-    <div id="project-7" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="project-8" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
+                <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>【MC】黑人抬棺——起床战争</h3>
@@ -348,28 +371,6 @@
     </div> <!-- end of lightbox-basic -->
     <!-- end of lightbox -->
 
-    <!-- Lightbox -->
-    <div id="project-8" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>Minecraft中所有搭桥技术！</h3>
-                <hr class="line-heading">
-                <h6>BV1xE411C78s</h6>
-                <p>这事我所有搬运视频里最喜欢的一个</p>
-                <p>播放量：1334<br>弹幕：12<br>点赞：46<br>投币：4<br>收藏：19<br>转发：5<br>（截至2021年1月28日）</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text"></p>
-                    <p class="testimonial-author"></p>
-                </div>
-                <a class="btn-solid-reg" href="https://www.bilibili.com/video/BV1xE411C78s" target="_blank">观看</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">返回</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
     <!-- end of project lightboxes -->
 	
 	    <!-- Footer -->
