--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                             <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>一个服务器、50人、一个世界 ：白桦林基岩版服务器第6周目纪念视频</span></div><img src="images/project-4.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item other self-made">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>[Phigros] S代表什么？</span></div><img src="images/project-5.jpg" alt="alternative"></a>
-                        </div>
-                        <div class="element-item mc self-made">
-                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</span></div><img src="images/project-5.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item other self-made">
-                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</span></div><img src="images/project-7.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>[Phigros] S代表什么？</span></div><img src="images/project-6.jpg" alt="alternative"></a>
+                        </div>
+                        <div class="element-item mc self-made">
+                            <a class="popup-with-move-anim" href="#project-7"><div class="element-item-overlay"><span>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</span></div><img src="images/project-7.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item mc self-made">
                             <a class="popup-with-move-anim" href="#project-8"><div class="element-item-overlay"><span>【MC】黑人抬棺——起床战争</span></div><img src="images/project-8.jpg" alt="alternative"></a>
@@ -287,6 +287,29 @@
                 <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
+                <h3>让你直呼过瘾的原神超燃混剪，纵享丝滑 —— 谨以此片，许愿早日出五星角色</h3>
+                <hr class="line-heading">
+                <h6>BV1Cy4y1h7SD</h6>
+                <p>特别用心做的一期混剪，采用21:9画幅，高潮转32:9画幅，制作10小时，修改5次</p>
+                <p>播放量：64<br>弹幕：0<br>点赞：18<br>投币：9<br>收藏：4<br>转发：2<br>（截至2021年2月24日）</p>
+                <div class="testimonial-container">
+                    <p class="testimonial-text"></p>
+                    <p class="testimonial-author"></p>
+                </div>
+                <a class="btn-solid-reg" href="https://www.bilibili.com/video/BV1Cy4y1h7SD" target="_blank">观看</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">返回</a> 
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of lightbox-basic -->
+    <!-- end of lightbox -->
+
+    <!-- Lightbox -->
+    <div id="project-6" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-8">
+                <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
+            </div> <!-- end of col -->
+            <div class="col-lg-4">
                 <h3>[Phigros] S代表什么？</h3>
                 <hr class="line-heading">
                 <h6>BV1Lt4y1z7Gc</h6>
@@ -303,11 +326,11 @@
     <!-- end of lightbox -->
 
     <!-- Lightbox -->
-    <div id="project-6" class="lightbox-basic zoom-anim-dialog mfp-hide">
+    <div id="project-7" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
+                <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>【我的世界】古风中型宫殿建筑展示——静安殿（遗风重制版）</h3>
@@ -320,29 +343,6 @@
                     <p class="testimonial-author"></p>
                 </div>
                 <a class="btn-solid-reg" href="https://www.bilibili.com/video/BV1HJ411t7aT" target="_blank">观看</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">返回</a> 
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of lightbox -->
-
-    <!-- Lightbox -->
-    <div id="project-7" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="row">
-            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-            <div class="col-lg-8">
-                <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
-            </div> <!-- end of col -->
-            <div class="col-lg-4">
-                <h3>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</h3>
-                <hr class="line-heading">
-                <h6>BV1j7411h7QA</h6>
-                <p>这是我真正意义上的第一个混剪视频，虽然原视频帧数低、掉帧，但照样剪的很好</p>
-                <p>播放量：226<br>弹幕：4<br>点赞：7<br>投币：3<br>收藏：1<br>转发：1<br>（截至2021年1月28日）</p>
-                <div class="testimonial-container">
-                    <p class="testimonial-text"></p>
-                    <p class="testimonial-author"></p>
-                </div>
-                <a class="btn-solid-reg" href="https://www.bilibili.com/video/BV1j7411h7QA" target="_blank">观看</a> <a class="btn-outline-reg mfp-close as-button" href="#projects">返回</a> 
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of lightbox-basic -->
