--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <a class="popup-with-move-anim" href="#project-4"><div class="element-item-overlay"><span>一个服务器、50人、一个世界 ：白桦林基岩版服务器第6周目纪念视频</span></div><img src="images/project-4.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item other self-made">
-                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>带上耳机，享受这卡点舒适的“击杀”锦集，PUBGLITE死亡剪辑，舒适卡点</span></div><img src="images/project-5.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#project-5"><div class="element-item-overlay"><span>让你直呼过瘾的原神超燃混剪，纵享丝滑 —— 谨以此片，许愿早日出五星角色</span></div><img src="images/project-5.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item other self-made">
                             <a class="popup-with-move-anim" href="#project-6"><div class="element-item-overlay"><span>[Phigros] S代表什么？</span></div><img src="images/project-6.jpg" alt="alternative"></a>
